# libtemplate

./: COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README.md  TODO  autogen.sh  configure.in  libtemplate.c  libtemplate.h  libtemplate_util.h  main.c  stringutil.c  stringutil.h  stringutiltest.c  test.template
debian/: README.debian  changelog  control  copyright  crontab.ex  inetd.conf.ex  info.ex  init.d.ex  manpage.1.ex  menu.ex  rules  watch.ex
libtemplate/: Makefile.am  debug.h  libtemplate.h  llist.h  mybool.h  strhash.h  stringutil.h  test.h  xmalloc.h
src/: Makefile.am  libtemplate.c  list.c  llist.c  strhash.c  stringutil.c  template.c  xmalloc.c
testsuite/: Makefile.am
testsuite/libtemplate/: Makefile.am  check_list.c  check_llist.c  check_strhash.c  check_stringutil.c
testsuite/template/: Makefile.am  insert.template  list.template  list.test  nada.test  regex.template
