SUBDIRS=src libtemplate testsuite
EXTRA_DIST=debian

docdir= ${prefix}/doc/libtemplate
doc_DATA = README AUTHORS BUGS ChangeLog NEWS

MAINTAINERCLEANFILES = COPYING INSTALL Makefile.in aclocal.m4 config-h.in \
		  configure libtool stamp-h.in

## create Debian package
#dist-deb:
#	dpkg-buildpackage -rfakeroot -us -uc -tc

